SERVER-83625 Make `lookupQuerySettingsForFind()` not check the node's sharding recovery state (#17760)

GitOrigin-RevId: 070059e14703d2140f50fb4d3fa23770f1796c60