src/mongo/db/commands/pipeline_command.cpp
@@ -129,10 +129,11 @@ public:
 
         // TODO: SERVER-73632 Remove feature flag for PM-635.
         // Forbid users from passing 'querySettings' explicitly.
+        const bool isInternalCLient =
+            opCtx->getClient()->session() && opCtx->getClient()->isInternalClient();
         uassert(7708001,
                 "BSON field 'querySettings' is an unknown field",
-                ShardingState::get(opCtx)->enabled() ||
-                    !aggregationRequest.getQuerySettings().has_value());
+                isInternalCLient || !aggregationRequest.getQuerySettings().has_value());
 
         return std::make_unique<Invocation>(
             this, opMsgRequest, std::move(aggregationRequest), std::move(privileges));
